--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,9 +26,8 @@
         {% endif %}
       {% endfor %}
 
-      <li class="sidebar-nav-item"><a href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a></li>
-      <li class="sidebar-nav-item"><a href="{{ site.github.repo }}">GitHub project</a></li>
-      <li class="sidebar-nav-item">Currently v{{ site.version }}</li>
+      <li class="sidebar-nav-item"><a href="http://www.tylertringas.com">Home</a></li>
+      <li class="sidebar-nav-item"><a href="https://www.storemapper.co">StoreMapper</a></li>
     </ul>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
