--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,7 +26,7 @@
         {% endif %}
       {% endfor %}
 
-      <li class="sidebar-nav-item"><a href="https://www.storemapper.co">StoreMapper</a></li>
+      <li class="sidebar-nav-item"><a href="https://www.storemapper.co">Projects: StoreMapper</a></li>
     </ul>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
