--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,6 +3,7 @@
     <div class="sidebar-about">
       <h1>{{ site.title }}</h1>
       <p class="lead">{{ site.description }}</p>
+      <img src="{{site.url}}/assets/tyler_head.png" alt="Tyler Tringas">
     </div>
 
     <ul class="sidebar-nav">
