fix sidebar fix post name

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,7 +3,7 @@
     <div class="sidebar-about">
       <h1>{{ site.title }}</h1>
       <p class="lead">{{ site.description }}</p>
-      <img src="{{site.url}}/assets/tyler_head.png" alt="Tyler Tringas">
+      <img width="150" src="/assets/tyler_head.png" alt="Tyler Tringas">
     </div>
 
     <ul class="sidebar-nav">
@@ -27,7 +27,8 @@
         {% endif %}
       {% endfor %}
 
-      <li class="sidebar-nav-item"><a href="https://www.storemapper.co">Projects: StoreMapper</a></li>
+      <li class="sidebar-nav-item"><a href="https://www.solarlist.com">Projects > SolarList</a></li>
+      <li class="sidebar-nav-item"><a href="https://www.storemapper.co">Projects > StoreMapper</a></li>
     </ul>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
