fiddle with sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,9 @@
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
       <h1>{{ site.title }}</h1>
-      <p class="lead">{{ site.description }}</p>
+      <p class="lead">
+        I travel a lot and build things like <a href="https://www.solarlist.com" target="_blank">SolarList</a> and <a href="https://www.storemapper.co" target="_blank">StoreMapper</a>.
+      </p>
       <img width="150" src="/assets/tyler_head.png" alt="Tyler Tringas">
     </div>
 
@@ -27,8 +29,7 @@
         {% endif %}
       {% endfor %}
 
-      <li class="sidebar-nav-item"><a href="https://www.solarlist.com">Projects > SolarList</a></li>
-      <li class="sidebar-nav-item"><a href="https://www.storemapper.co">Projects > StoreMapper</a></li>
+      <li class="sidebar-nav-item"><a href="https://twitter.com/tylertringas">@tylertringas</a></li>
     </ul>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
