--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -32,6 +32,6 @@
       <li class="sidebar-nav-item"><a href="https://twitter.com/tylertringas">@tylertringas</a></li>
     </ul>
 
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    <p>uncopyrighted</p>
   </div>
 </div>
